--- a/Podcast/Startseite.html
+++ b/Podcast/Startseite.html
@@ -28,7 +28,7 @@
     <link rel="canonical" href="/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
   <body data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="de"><header class="u-clearfix u-custom-color-4 u-header u-header" id="sec-9755"><div class="u-clearfix u-sheet u-sheet-1">
-        <div class="u-social-icons u-spacing-10 u-social-icons-1">
+        <div bgColor="#2e3440" class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" target="_blank" data-type="Spotify" title="Spotify" href=""><span class="u-icon u-social-icon u-social-spotify u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-28a3"></use></svg><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-28a3"><circle fill="#00D95F" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFE" d="M94.5,41.9c-1.9-1.1-3.8-2.1-5.8-3c-2-0.9-4-1.7-6.1-2.4c-5.1-1.7-10.2-3-15.4-3.9
 	c-5.2-0.9-10.5-1.3-15.8-1.5c-2.2-0.1-4.3-0.1-6.5,0c-2.2,0.1-4.3,0.2-6.5,0.4c-2.1,0.2-4.1,0.4-6.1,0.7c-2,0.3-4,0.7-6,1.1
 	c-0.8,0.2-1.6,0.4-2.4,0.6c-0.8,0.2-1.6,0.5-2.4,0.7c-1.3,0.4-2.4,1.3-3.1,2.3c-0.7,1.1-1.1,2.4-1.1,3.7c0,1.4,0.5,2.7,1.3,3.7
